--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
